[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mamadou", email = "kmma.960@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"  # ← TRÈS IMPORTANT : 3.11 au lieu de 3.13

dependencies = [
    "fastapi>=0.104.1,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "sqlalchemy>=2.0.45,<3.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.21,<0.0.22",
    "email-validator>=2.3.0,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "supabase (>=2.27.2,<3.0.0)",
    "resend (>=2.19.0,<3.0.0)"
]

# SUPPRIMEZ ou MODIFIEZ cette section :
# [tool.poetry]
# packages = [{include = "backend", from = "src"}]  ← SUPPRIMEZ

[tool.poetry]
packages = [{include = "backend"}]  # ← SIMPLE, sans "from = 'src'"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
black = ">=25.12.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
mypy = ">=1.19.1,<2.0.0"